# FattyHelper

./: ButtonOptions.cpp  ButtonOptions.h  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json  imgui.ini  main.cpp  main2.cpp
.cache/clangd/index/: imconfig.h.9EDA573D8AA16878.idx  imgui.cpp.3FD1371F4D24D515.idx  imgui.h.A401878A8E57111A.idx  imgui_demo.cpp.736667DAEF19B443.idx  imgui_draw.cpp.2C40846D69D81A5C.idx  imgui_impl_sdl2.cpp.6192A0E8BFEE8062.idx  imgui_impl_sdl2.h.D679DBBC5533BBA1.idx  imgui_impl_sdlrenderer2.cpp.566FE31B928FC713.idx  imgui_impl_sdlrenderer2.h.27CF807C9B9099E8.idx  imgui_internal.h.622F7A4157D1519D.idx  imgui_tables.cpp.5E61DDDDA0BD9840.idx  imgui_widgets.cpp.925358771BADC806.idx  imstb_rectpack.h.6AEFB4477D50A126.idx  imstb_textedit.h.080585B226304D9B.idx  imstb_truetype.h.9BCA9A2392014E9F.idx  main.cpp.8FDF40C05CC02129.idx
imgui/examples/example_sdl2_sdlrenderer2/: imgui.ini
src/: AttackHandler.cpp  AttackHandler.h  BUtils.cpp  CurveRenderer.cpp  CurveRenderer.h  Editor.cpp  Editor.h  FileHandler.cpp  FileHandler.h  Game.cpp  Game.h  Makefile  PointDragger.cpp  PointDragger.h  SetupUtils.h  Structs.h  TextDisplay.cpp  TextDisplay.h  Utils.cpp  Utils.h  compile_commands.json  main.cpp
src/.cache/clangd/index/: AttackHandler.h.B6AD5E7F0D7889E6.idx  Editor.cpp.0CAA29E17B402F6E.idx  Editor.h.04B8C7AF67511080.idx  FileHandler.h.B0E74B9ED4DF860A.idx  PointDragger.h.CD6D58AEE91C7025.idx  SetupUtils.h.581C69ECA398B984.idx  TextDisplay.h.0B7DCDF31C709EB1.idx  main.cpp.FF8F083511D12AAC.idx
